syntax = "proto3";

package intr.v1;
option go_package="intr/v1;intrv1";

service InteractiveService {
    rpc IncrReadCnt(IncrReadCntRequest) returns (IncrReadCntResponse);
  // Like 点赞
      rpc Like(LikeRequest) returns (LikeResponse);
  // CancelLike 取消点赞
      rpc CancelLike(CancelLikeRequest) returns (CancelLikeResponse);
  // Collect 收藏
     rpc Collect(CollectRequest) returns (CollectResponse);
     rpc Get(GetRequest) returns (GetResponse);
     rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse);
}

message GetByIdsRequest {
  string biz = 1;
  repeated int64 ids = 2;
}

message GetByIdsResponse {
  map<int64, Interactive> intrs = 1;
}

message GetRequest {
  string biz = 1;
  // protobuf 比较推荐下划线。你也可以用驼峰
  int64 biz_id = 2;
  int64 uid = 3;
}

message GetResponse {
  Interactive intr = 1;
}

message Interactive {
  string biz = 1;
  int64 biz_id = 2;

  int64  read_cnt = 3;
  int64 like_cnt = 4;
  int64 collect_cnt = 5;
  bool liked = 6;
  bool collected = 7;
}

message CollectRequest {
  string biz = 1;
  // protobuf 比较推荐下划线。你也可以用驼峰
  int64 biz_id = 2;
  int64 uid = 3;
  int64 cid = 4;
}

message CollectResponse {

}

message CancelLikeRequest {
  string biz = 1;
  // protobuf 比较推荐下划线 也可以用驼峰
  int64 biz_id = 2;
  int64 uid = 3;
}

message CancelLikeResponse {

}

message LikeRequest {
  string biz = 1;
  // protobuf 比较推荐下划线 也可以用驼峰
  int64 biz_id = 2;
  int64 uid = 3;
}

message LikeResponse {

}


message IncrReadCntRequest {
  string biz = 1;
  // protobuf 比较推荐下划线。你也可以用驼峰
  int64 biz_id = 2;
}

message IncrReadCntResponse {
  // 有些公司的规范
  // Code
  // Msg
  // Data
}


